tests/fail/generic_union_forbidden.stderr
error[E0426]: Union member 'val' has restricted type 'bool' (underlying 'bool')
 --> tests/fail/generic_union_forbidden.tk:2:7
  |
 2 | shape DangerousUnion<T> (
  |       ^
error[E0425]: Partial initialization of Union 'DangerousUnion_M_bool': variant 'val' size 1 is smaller than Union size 4
 --> tests/fail/generic_union_forbidden.tk:11:14
   |
 11 |     auto u = DangerousUnion<bool>(val = true);
   |              ^
